@@ -1,6 +1,7 @@
 Mon Jun 9 2014
 1. Changes
    * 1 can now be used in the model formula to specify an intercept term
+   * If debugmode is turned on MLwiN will pause before and after fitting the model
 
 Fri Jun 6 2014
 1. Bug fixing
